# oxide86

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  STRING_INSTRUCTIONS.md  TODO.md  compare_colors.py
core/: Cargo.toml  build.rs
core/benches/: instruction_benchmarks.rs
core/src/: bios_logo.rs  bus.rs  cdrom.rs  clock.rs  computer.rs  cpu_type.rs  debugger.rs  decoder.rs  dis.rs  disk.rs  disk_backend.rs  drive_manager.rs  fat.rs  io_bus.rs  io_port.rs  joystick.rs  keyboard.rs  lib.rs  logging.rs  memory.rs  memory_allocator.rs  memory_bus.rs  mouse.rs  palette.rs  peripheral.rs  pic.rs  reverse_engineer.rs  rodio_speaker.rs  scan_code.rs  serial_logger.rs  serial_mouse.rs  serial_port.rs  tests.rs  time.rs  utils.rs  video.rs  video_card_type.rs
core/src/audio/: adlib.rs  mod.rs  nuked_opl3.rs  opl2.rs  speaker.rs
core/src/cpu/: bios.rs  cpu_type.rs  f80.rs  f80_trig.rs  instructions.rs  mod.rs  protected_mode.rs  timing.rs
core/src/cpu/bios/: ata.rs  bda.rs  disk_error.rs  dos_error.rs  int08.rs  int08_timer_interrupt.rs  int09.rs  int09_keyboard_hardware_interrupt.rs  int10.rs  int10_video_services.rs  int11.rs  int11_get_equipment_list.rs  int12.rs  int12_get_memory_size.rs  int13.rs  int13_disk_services.rs  int14.rs  int14_serial_port_services.rs  int15.rs  int15_miscellaneous.rs  int16.rs  int16_keyboard_services.rs  int17.rs  int17_printer_services.rs  int1a.rs  int1a_time_services.rs  int1c.rs  int20.rs  int21.rs  int21_dos_services.rs  int25.rs  int28.rs  int29.rs  int2a.rs  int2f.rs  int33.rs  int35_3f.rs  int43_font_services.rs  int70_rtc_alarm_interrupt.rs  int74_ps2_mouse_interrupt.rs  (+2 more)
core/src/cpu/instructions/: arithmetic.rs  comparison.rs  control_flow.rs  data_transfer.rs  decoder.rs  fpu.rs  io.rs  logical.rs  mod.rs  shift_rotate.rs  string.rs  tests.rs
core/src/devices/: adlib.rs  clock.rs  dma.rs  floppy_disk_controller.rs  game_port.rs  hard_disk_controller.rs  keyboard_controller.rs  mca_stub.rs  mod.rs  nuked_opl3.rs  parallel_port.rs  parallel_port_loopback.rs  pc_speaker.rs  pic.rs  pit.rs  printer.rs  rtc.rs  serial_loopback.rs  serial_mouse.rs  sound_blaster.rs  sound_blaster_cdrom.rs  uart.rs
core/src/devices/modem/: at_parser.rs  mod.rs  phonebook.rs  transport.rs
core/src/devices/sound_blaster/: cdrom.rs  dsp.rs  midi.rs  mixer.rs  mod.rs  mpu.rs  opl.rs
core/src/disk/: backed_disk.rs  cdrom.rs  disk_controller.rs  disk_geometry.rs  drive_number.rs  floppy_disk_controller.rs  mem_backend.rs  mod.rs
core/src/font/: README.md  mod.rs
core/src/io/: ata.rs  cga_ports.rs  joystick_port.rs  mod.rs  pit.rs  system_control_port.rs
core/src/sound/: adlib.rs  mod.rs  opl2.rs
core/src/test_data/: hello_world_int21_write_string.asm  hello_world_video_memory.asm
core/src/test_data/cpu/: cpu_detect.asm  fpu_not_present.asm  fpu_present.asm  irq_chain.asm  loadall.asm  op286.asm  op8086.asm  op8087.asm  op8087_arith.asm  op8087_compare.asm  op8087_control.asm  op8087_int64.asm  op8087_load_store.asm  op8087_trig.asm  pm_gdt_idt.asm  pm_idt.asm  pm_mode_switch.asm  pm_rings.asm  pm_segments.asm  pm_step1_msw.asm  pm_step4_limits.asm  pm_step6_exceptions.asm  pm_step7_lldt.asm  pm_step8_call_gate.asm  pm_step9_rings.asm  pm_warm_restart.asm  shift_cl.asm
core/src/test_data/keyboard/: check_keystroke_int16.asm  custom_int09_keyboard_intercept.asm
core/src/test_data/video/: blink_and_cursor.asm  cga_snow_avoidance.asm  ega_crtc_start_address.asm  ega_two_pass_sprite_noise.asm  font_direct_render.asm  int10_cga_ac_palette.asm  int10_write_char_xor_ega_0dh.asm  int10_write_char_xor_inverted.asm  mode_04h_cga_320x200x4.asm  mode_04h_ega_ac_palette.asm  mode_06h_cga_640x200x2.asm  mode_06h_vga_custom_dac.asm  mode_0dh_ega_320x200x16.asm  mode_0eh_ega_640x200x16.asm  mode_0fh_ega_640x350x4.asm  mode_10h_ega_640x350x16.asm  mode_11h_vga_640x480x2.asm  mode_12h_vga_640x480x16.asm  mode_13h_vga_320x200x256.asm  print_chars_8x14.asm  print_chars_8x16.asm  print_chars_8x8.asm
core/src/tests/: mock_com_device.rs  mod.rs  video.rs
core/src/tests/cpu/: mod.rs
core/src/tests/devices/: adlib.rs  dma.rs  game_port.rs  keyboard.rs  mod.rs  modem.rs  mouse.rs  parallel_port_loopback.rs  pit.rs  printer.rs  rtc.rs  serial_loopback.rs  sound_blaster.rs  uart.rs
core/src/video/: README.md  cga.rs  composite.rs  ega.rs  font.rs  mod.rs  mode.rs  palette.rs  render.rs  renderer.rs  text.rs  video_buffer.rs  video_card.rs  video_card_type.rs
disassembler/: Cargo.toml
disassembler/src/: disasm.rs  loader.rs  main.rs  output.rs
disktools/: Cargo.toml
disktools/src/: copy.rs  dir.rs  disk.rs  format.rs  main.rs
emu86-disktools/: Cargo.toml
emu86-disktools/src/: copy.rs  dir.rs  format.rs  main.rs
native-cli/: Cargo.toml
native-cli/src/: command_mode.rs  keyboard.rs  main.rs  terminal_keyboard.rs  terminal_mouse.rs  terminal_video.rs  video.rs
native-common/: Cargo.toml
native-common/src/: cli.rs  clock.rs  disk_backend.rs  gilrs_joystick.rs  host_directory_disk.rs  lib.rs  logging.rs  modem_transport.rs  rodio_adlib.rs  rodio_pc_speaker.rs  rodio_pcm.rs  rodio_sound_card.rs  rodio_speaker.rs  setup.rs  throttle.rs
native-common/src/disk/: file_disk_backend.rs  mod.rs
native-gui/: Cargo.toml
native-gui/src/: gui_keyboard.rs  gui_mouse.rs  gui_video.rs  main.rs  menu.rs  mouse_motion_state.rs  notification.rs  performance_tracker.rs
oxide-tools/: Cargo.toml  logs_to_asm.md
wasm/: Cargo.toml  README.md
wasm/scripts/: build.sh  serve.sh
wasm/src/: clock.rs  lib.rs  shared_mem_backend.rs  web_joystick.rs  web_keyboard.rs  web_mouse.rs  web_speaker.rs  web_video.rs
wasm/www/: .dockerignore  .prettierignore  Dockerfile  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
wasm/www/public/: images.json
wasm/www/scripts/: run-dev.sh
wasm/www/src/: App.jsx  App.module.scss  App.tsx  emulatorState.ts  imageLibrary.ts  keycodes.ts  main.jsx  main.tsx  pointerLockState.ts  soundCardWorklet.ts  state.ts  vite-env.d.ts
(+394 files in other folders)
