[package]
name = "emu86"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["core", "native-common", "native-cli", "native-gui", "wasm", "emu86-disktools"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fatfs = { version = "0.3", features = ["alloc"] }
log = "0.4"

[workspace.lints.clippy]
new_without_default = "allow"
