[package]
name = "oxide86"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "core",
    "debugger",
    "disktools",
    "native-cli",
    "native-common",
    "native-gui",
    "tools",
    "wasm",
]

[workspace.dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
fatfs = { version = "0.3", features = ["alloc"] }
gilrs = "0.11"
image = "0.25"
log = "0.4"
rodio = "0.22"
serde_json = "1.0"
strum = "0.28"
strum_macros = "0.28"
test-log = "0.2"
walkdir = "2.5"

[workspace.lints.clippy]
new_without_default = "allow"
