[package]
name = "oxide86-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

[build-dependencies]
walkdir = { workspace = true }

[lints]
workspace = true
