[package]
name = "oxide86-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

[build-dependencies]
walkdir = { workspace = true }

[dev-dependencies]
image = { workspace = true }

[lints]
workspace = true
