[package]
name = "oxide86-disasm"
version = "0.1.0"
edition = "2021"

[dependencies]
oxide86-core = { path = "../core" }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
