[package]
name = "emu86-disktools"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "emu86-disktools"
path = "src/main.rs"

[dependencies]
emu86-core = { path = "../core" }
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = "0.11"
log = { workspace = true }
fatfs = { version = "0.3", features = ["alloc"] }
chrono = "0.4"

[lints]
workspace = true
