[package]
name = "oxide86-native-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
oxide86-native-common = { path = "../native-common" }
oxide86-core = { path = "../core" }
clap = { workspace = true }
anyhow = { workspace = true }
env_logger = "0.11"
log = { workspace = true }
crossterm = "0.29"

[lints]
workspace = true
