[package]
name = "oxide86-native-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
oxide86-native-common = { path = "../native-common" }
oxide86-core = { path = "../core" }
clap = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
crossterm = "0.28.1"
string_cmd = { version = "0.1.2", features = ["crossterm"] }

[lints]
workspace = true
