[package]
name = "emu86-native-common"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
chrono = "0.4"
emu86-core = { path = "../core" }
gilrs = "0.11"
rodio = "0.21"
anyhow = { workspace = true }
log = { workspace = true }
walkdir = "2.5"
fatfs = { workspace = true }

[lints]
workspace = true
