[package]
name = "oxide86-native-common"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
oxide86-core = { path = "../core" }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }
rodio = { workspace = true }

[lints]
workspace = true
