[package]
name = "emu86-native-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.29"
pixels = "0.15"
emu86-native-common = { path = "../native-common" }
emu86-core = { path = "../core" }
anyhow = { workspace = true }
env_logger = "0.11"
log = { workspace = true }
clap = { workspace = true }
egui = "0.27"
egui-winit = { version = "0.27", default-features = false, features = ["links"] }
egui-wgpu = "0.27"
rfd = "0.17.2"
chrono = "0.4"
image = "0.25"

[lints]
workspace = true
