[package]
name = "oxide86-native-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
oxide86-native-common = { path = "../native-common" }
oxide86-core = { path = "../core" }
anyhow = { workspace = true }
log = { workspace = true }
winit = "0.29"
pixels = "0.15"
egui = "0.27"
egui-winit = { version = "0.27", default-features = false, features = ["links"] }
egui-wgpu = "0.27"

[lints]
workspace = true
