[package]
name = "oxide86-tools"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "logs-to-asm"
path = "src/bin/logs_to_asm.rs"

[dependencies]
oxide86-core = { path = "../core" }
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
regex = "1"
serde_json = "1"

[lints]
workspace = true
